--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>API</title>
 </head>
 <body>
-    <img class="wouf" src="" alt="">
+    <!-- <img class="wouf" src="" alt=""> -->
+    <h1>One Piece Episodes</h1>
+    <ul id="episodesList"></ul>
     <script src="script.js"></script>
 </body>
 </html>
